fixed the overflow on html

--- a/index.css
+++ b/index.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Prevents overflow on the html element */
+}
+
 body {
   margin: 0;
   background: no-repeat center center fixed;
@@ -15,11 +23,12 @@ body {
 }
 
 main {
-  padding: 15px;
+  padding: 1rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 div.top {
